--- a/css/main.scss
+++ b/css/main.scss
@@ -8,11 +8,16 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
+    .title {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
 
     .inner {
-        background: #008cff;
+        background: #f700ff;
         padding: 1em;
-        width: 20vw;
+        margin: 0 auto;
+        width: 17em;
         border-radius: 10px;
         clip-path: circle(10% at 90% 20%);
         transition: all .5s ease-in-out;
@@ -29,11 +34,16 @@ body {
             float: right;
             transition: color .5s;
             position: relative;
-            margin-right: 5%;
-            margin-top: 5%;
+            margin-right: 0.5em;
+            margin-top: 0.8em;
+
+            .fas {
+                font-size: 1.2em;
+                color: #fff;
+            }
         }
 
-        &:hover span {
+        &:hover span .fas{
             color: rgba($color: #fff, $alpha: 0);
         }
 
@@ -44,5 +54,7 @@ body {
         p {
             color: #fff;
             font-size: 1rem;
+            text-align: justify;
+            text-justify: inter-word;
         }
     }
